--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 
     /* Primary */
     --background-main: #f7f7f7;
-    /* --background-main: #E5E5E5; */
-    --dark-grey: #2d3436;
+    --dark-gray: #2d3436;
+    --light-gray: #d2dae2;
 
     /* Accent */
     --azraq-blue: #4a69bd;
@@ -174,7 +174,7 @@ header {
     width: 100%;
     height: 100%;
 
-    border-radius: 3px;
+    border-radius: 8px;
     box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.15);
 
     -webkit-backface-visibility: hidden; /* Safari */
@@ -183,11 +183,27 @@ header {
 
 .flip-card-front {
     background: white;
+    /* position: relative; */
 }
 
 .flip-card-back {
-    background: white;
     transform: rotateY(180deg);
+}
+
+.flip-card:nth-child(1) .flip-card-back {
+    background-color: #33a5e9;
+    background-image: linear-gradient(160deg, #33a5e9 0%, #9eddd5 100%);
+    
+}
+
+.flip-card:nth-child(2) .flip-card-back {
+    background-color: #85FFBD;
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+}
+
+.flip-card:nth-child(3) .flip-card-back {
+    background-color: #FBAB7E;
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);    
 }
 
 .flip-card img {
@@ -196,6 +212,97 @@ header {
 
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.flip-card-front h2 {
+    position: absolute;
+    top: 125px;
+    right: 25px;
+    font-weight: normal;
+    font-size: 20px;
+    background-color: rgba(100%, 100%, 100%, .8);
+    padding: 10px;
+    font-style: italic;
+}
+
+.front-card-content {
+    height: 290px;
+    padding: 0 10%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+}
+
+.front-card-content hr {
+    border: .5px solid var(--light-gray);
+}
+
+.back-card-content {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.back-card-content h1 {
+    color: white;
+    font-family: Mako;
+    text-transform: uppercase;
+}
+
+.white-btn {
+    width: 200px;
+    padding: 20px 0;
+    border-radius: 50px;
+    background: white;
+    color: black;
+
+    position: relative;
+    transition: bottom .3s ease;
+    bottom: 0;
+}
+
+.white-btn::after {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    
+    background: inherit;
+    border-radius: 50px;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+
+    transition: all .5s ease;
+}
+
+.white-btn:hover {
+    color: black;
+    background: white;
+
+    bottom: 5px;
+}
+
+.white-btn:active {
+    bottom: 0px;
+    box-shadow: none;
+}
+
+.white-btn:hover::after {
+    width: 130%;
+    height: 150%;
+    background: none;
 }
