--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,7 @@ header {
 }
 
 .front-card-content {
-    height: 290px;
+    height: 281px;
     padding: 0 10%;
 
     display: flex;
@@ -238,7 +238,7 @@ header {
 }
 
 .front-card-content hr {
-    border: .5px solid var(--light-gray);
+    border: 0.5px solid var(--light-gray);
 }
 
 .back-card-content {
@@ -341,14 +341,19 @@ header {
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     height: 80%;
+
+    position: relative;
 }
 
 /* The Close Button */
 .close {
+    line-height: 1.4;
     color: #aaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
 
 .close:hover,
