--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Mako&family=Mukta+Vaani:wght@300;400;500;700&family=Work+Sans:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mako&family=Mukta+Vaani:wght@300;400;500;700&family=Work+Sans:wght@500;700&display=swap");
 
 :root {
+  /* Colors */
 
-    /* Colors */
+  /* Primary */
+  --background-main: #f7f7f7;
+  --dark-gray: #2d3436;
+  --light-gray: #d2dae2;
 
-    /* Primary */
-    --background-main: #f7f7f7;
-    --dark-gray: #2d3436;
-    --light-gray: #d2dae2;
-
-    /* Accent */
-    --azraq-blue: #4a69bd;
-    --livid: #6a89cc;
-    
+  /* Accent */
+  --azraq-blue: #4a69bd;
+  --livid: #6a89cc;
 }
 
-*, ::before, ::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: 'Mukta Vaani';
-    font-weight: 400;
-    color: var(--dark-grey);
+  font-family: "Mukta Vaani";
+  font-weight: 400;
+  color: var(--dark-grey);
 
-    background-color: var(--background-main);
-    height: 300vh;
+  background-color: var(--background-main);
+  height: 300vh;
 }
 
 h1 {
-    font-family: 'Work sans';
-    font-weight: 700;
+  font-family: "Work sans";
+  font-weight: 700;
 }
 
 h2 {
-    font-family: 'Mako';
+  font-family: "Mako";
 }
 
 a {
-    color: var(--dark-grey);
-    text-decoration: none;
+  color: var(--dark-grey);
+  text-decoration: none;
 
-    transition: color .2s ease-in-out;
+  transition: color 0.2s ease-in-out;
 }
 
 .section {
-    height: 100vh;
+  height: 100vh;
 }
 
 .cta {
-    background: var(--azraq-blue);
-    border: none;
-    padding: 15px 30px;
-    border-radius: .5rem;
+  background: var(--azraq-blue);
+  border: none;
+  padding: 15px 30px;
+  border-radius: 0.5rem;
 
-    cursor: pointer;
-    
-    font-size: 1rem;
-    font-weight: 500;
-    color: var(--background-main);
+  cursor: pointer;
 
-    transition: background .2s ease-in-out;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--background-main);
+
+  transition: background 0.2s ease-in-out;
 }
 
 .cta:hover {
-    background: var(--livid);
+  background: var(--livid);
 }
 
 /* --- --- --- --- --- --- */
@@ -75,51 +75,51 @@ a {
 /* --- --- --- --- --- --- */
 
 header {
-    padding: 25px 50px;
+  padding: 25px 50px;
 }
 
 .nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .nav-links {
-    list-style: none;
+  list-style: none;
 }
 
 .nav-links li {
-    display: inline;
-    margin: 0 12px;
+  display: inline;
+  margin: 0 12px;
 }
 
 .nav-links li a:hover {
-    color: var(--azraq-blue);
+  color: var(--azraq-blue);
 }
 
 .heading-title {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .heading-title h1 {
-    font-size: 3rem;
-    text-transform: uppercase;
-    letter-spacing: 1.5rem;
-    text-indent: 1.5rem;    /* Counteract letter spacing on the last one */
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 1.5rem;
+  text-indent: 1.5rem; /* Counteract letter spacing on the last one */
 }
 
 .heading-title h2 {
-    font-size: 1.5rem;
-    letter-spacing: .25rem;
+  font-size: 1.5rem;
+  letter-spacing: 0.25rem;
 }
 
 .heading-title .cta {
-    margin-top: 20px;
-    perspective: 1000px;
+  margin-top: 20px;
+  perspective: 1000px;
 }
 
 /* @media screen and (max-width: 725px) {
@@ -128,13 +128,85 @@ header {
     }
 } */
 
-
 /* --- --- --- --- --- --- */
 /*     <-- Gallery -->     */
 /* --- --- --- --- --- --- */
 
 .gallery {
-    background: red;
+  background: red;
+  display: flex;
+}
+
+#txtdiscover {
+  position: relative;
+  left: -20%;
+  top: 15%;
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 500px;
+  text-align: justify;
+}
+
+#discover span {
+  display: block;
+  transition: 150ms;
+}
+
+#discover span:hover {
+  transform: scale(1.2);
+  z-index: 2;
+}
+
+#imgdiscover {
+  width: 550px;
+  height: 400px;
+  position: relative;
+  left: 60%;
+  top: 25%;
+}
+
+#img1 {
+  width: 350px;
+  height: 200px;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  background-color: blue;
+}
+
+#img2 {
+  width: 300px;
+  height: 200px;
+  position: absolute;
+  left: 30%;
+  top: 15%;
+  background-color: yellow;
+}
+
+#img3 {
+  width: 375px;
+  height: 200px;
+  position: absolute;
+  left: 5%;
+  top: 35%;
+  background-color: lightgreen;
+}
+
+#discover h1 {
+  width: min-content;
+  height: min-content;
+  font-size: 42px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#discover p {
+  position: relative;
+  top: 20%;
+  left: 0%;
+  font-size: 20px;
 }
 
 /* --- --- --- --- --- --- */
@@ -142,225 +214,222 @@ header {
 /* --- --- --- --- --- --- */
 
 .cards {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 75px;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 75px;
+  flex-wrap: wrap;
 }
 
 .flip-card {
-    height: 520px;
-    width: 340px;
+  height: 520px;
+  width: 340px;
 
-    perspective: 1000px;
+  perspective: 1000px;
 }
 
 .flip-card-inner {
-    text-align: center;
-    transform-style: preserve-3d;
-    transition: transform .8s;
+  text-align: center;
+  transform-style: preserve-3d;
+  transition: transform 0.8s;
 
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 
-    border-radius: 8px;
-    box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.15);
+  border-radius: 8px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
 }
 
 .flip-card-front {
-    background: white;
-    /* position: relative; */
+  background: white;
+  /* position: relative; */
 }
 
 .flip-card-back {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-card:nth-child(1) .flip-card-back {
-    background-color: #33a5e9;
-    background-image: linear-gradient(160deg, #33a5e9 0%, #9eddd5 100%);
-    
+  background-color: #33a5e9;
+  background-image: linear-gradient(160deg, #33a5e9 0%, #9eddd5 100%);
 }
 
 .flip-card:nth-child(2) .flip-card-back {
-    background-color: #85FFBD;
-    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
 }
 
 .flip-card:nth-child(3) .flip-card-back {
-    background-color: #FBAB7E;
-    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);    
+  background-color: #fbab7e;
+  background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
 }
 
 .flip-card img {
-    width: 100%;
-    height: 230px;
+  width: 100%;
+  height: 230px;
 
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .flip-card-front h2 {
-    position: absolute;
-    top: 125px;
-    right: 25px;
-    font-weight: normal;
-    font-size: 20px;
-    background-color: rgba(100%, 100%, 100%, .8);
-    padding: 10px;
-    font-style: italic;
+  position: absolute;
+  top: 125px;
+  right: 25px;
+  font-weight: normal;
+  font-size: 20px;
+  background-color: rgba(100%, 100%, 100%, 0.8);
+  padding: 10px;
+  font-style: italic;
 }
 
 .front-card-content {
-    height: 281px;
-    padding: 0 10%;
+  height: 281px;
+  padding: 0 10%;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
 }
 
 .front-card-content hr {
-    border: 0.5px solid var(--light-gray);
+  border: 0.5px solid var(--light-gray);
 }
 
 .back-card-content {
-    height: 100%;
+  height: 100%;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
 
 .back-card-content h1 {
-    color: white;
-    font-family: Mako;
-    text-transform: uppercase;
+  color: white;
+  font-family: Mako;
+  text-transform: uppercase;
 }
 
 .white-btn {
-    width: 200px;
-    padding: 20px 0;
-    border-radius: 50px;
-    background: white;
-    color: black;
+  width: 200px;
+  padding: 20px 0;
+  border-radius: 50px;
+  background: white;
+  color: black;
 
-    position: relative;
-    transition: bottom .3s ease;
-    bottom: 0;
+  position: relative;
+  transition: bottom 0.3s ease;
+  bottom: 0;
 }
 
 .white-btn::after {
-    content: "";
-    display: block;
+  content: "";
+  display: block;
 
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    
-    background: inherit;
-    border-radius: 50px;
-    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
+  background: inherit;
+  border-radius: 50px;
 
-    transition: all .5s ease;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+
+  transition: all 0.5s ease;
 }
 
 .white-btn:hover {
-    color: black;
-    background: white;
+  color: black;
+  background: white;
 
-    bottom: 5px;
+  bottom: 5px;
 }
 
 .white-btn:active {
-    bottom: 0px;
-    box-shadow: none;
+  bottom: 0px;
+  box-shadow: none;
 }
 
 .white-btn:hover::after {
-    width: 130%;
-    height: 150%;
-    background: none;
+  width: 130%;
+  height: 150%;
+  background: none;
 }
 
 /* Modal box */
 
 #modal-sector {
-    display: none; /* Hidden by default */
+  display: none; /* Hidden by default */
 }
 
 #modal-transition {
-    display: none; /* Hidden by default */
+  display: none; /* Hidden by default */
 }
 
 #modal-clients {
-    display: none; /* Hidden by default */
+  display: none; /* Hidden by default */
 }
 
 .modal {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,.4); /* Black w/ opacity */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-    height: 80%;
+  background-color: #fefefe;
+  margin: 5% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  height: 80%;
 
-    position: relative;
+  position: relative;
 }
 
 /* The Close Button */
 .close {
-    line-height: 1.4;
-    color: #aaa;
-    font-size: 28px;
-    font-weight: bold;
-    position: absolute;
-    top: 10px;
-    right: 20px;
+  line-height: 1.4;
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  top: 10px;
+  right: 20px;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
-
-
