--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,7 @@ header {
     left: 0;
     top: 0;
     width: 100%; /* Full width */
-     height: 100%; /* Full height */
+    height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,.4); /* Black w/ opacity */
@@ -343,6 +343,20 @@ header {
     height: 80%;
 
     position: relative;
+
+    animation-name: animatezoomin;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatezoomin {
+    from {transform: scale(0); opacity: 0;} 
+    to {transform: scale(1); opacity: 1;}
+}
+
+@keyframes animatezoomin {
+    from {transform: scale(0); opacity: 0;} 
+    to {transform: scale(1); opacity: 1;}
 }
 
 /* The Close Button */
