--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,12 @@
     /* Accent */
     --azraq-blue: #4a69bd;
     --livid: #6a89cc;
-    
+
 }
 
-*, ::before, ::after {
+*,
+::before,
+::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -23,12 +25,63 @@
 }
 
 body {
-    font-family: 'Mukta Vaani';
+    font-family: 'Mukta Vaani', sans-serif;
     font-weight: 400;
     color: var(--dark-grey);
 
     background-color: var(--background-main);
     height: 300vh;
+}
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+} 
+
+/* Scroll back to top button */
+#scroll-to-top {
+    display: none;
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+
+    z-index: 10;
+
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+
+    background-color: rgba(50, 50, 50, .3);
+    transition: background-color .3s;
+}
+
+#scroll-to-top i {
+    font-size: 20px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    
+    transform: translate(-50%, -50%) rotate(-90deg);
+    color: #333;
+    
+    animation: bounce ease 2s infinite;
+}
+
+#scroll-to-top:hover {
+    background-color: rgba(50, 50, 50, .45);
+}
+
+@keyframes bounce {     /* animation from https://codepen.io/nelledejones/pen/gOOPWrK */
+    0%, 20%, 50%, 80%, 100% {transform: translate(-50%, -50%) rotate(-90deg) translateX(0);}
+	40% {transform: translate(-50%, -50%) rotate(-90deg) translateX(-10px);}
+	60% {transform: translate(-50%, -50%) rotate(-90deg) translateX(-5px);}
 }
 
 h1 {
@@ -58,7 +111,7 @@ a {
     border-radius: .5rem;
 
     cursor: pointer;
-    
+
     font-size: 1rem;
     font-weight: 500;
     color: var(--background-main);
@@ -82,6 +135,10 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.logo img {
+    vertical-align: bottom;
 }
 
 .nav-links {
@@ -109,7 +166,8 @@ header {
     font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: 1.5rem;
-    text-indent: 1.5rem;    /* Counteract letter spacing on the last one */
+    text-indent: 1.5rem;
+    /* Counteract letter spacing on the last one */
 }
 
 .heading-title h2 {
@@ -133,8 +191,95 @@ header {
 /*     <-- Gallery -->     */
 /* --- --- --- --- --- --- */
 
+#discover {
+    display: flex;
+    flex-direction: column;
+}
+
 .gallery {
-    background: red;
+    flex: 1;
+    display: flex;
+}
+
+#txtdiscover {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#discover h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: .6rem;
+    text-indent: .6rem;
+    text-align: center;
+    margin: 25px 0;
+}
+
+#discover p {
+    width: 60%;
+}
+
+#imgdiscover {
+    flex: 1;
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-box {
+    position: relative;
+    width: 80%;
+    height: 55%;
+}
+
+#discover span {
+    display: block;
+    transition: 150ms;
+}
+
+#discover span:hover {
+    scale: 1.2;
+    z-index: 2;
+}
+
+#img1 {
+    width: 60%;
+    height: 300px;
+    background-color: blue;
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#img2 {
+    width: 60%;
+    height: 300px;
+    background-color: yellow;
+    
+    position: absolute;
+    top: 15%;
+    right: 0;
+}
+
+#img3 {
+    width: 60%;
+    height: 300px;
+    background-color: lightgreen;
+    
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    transform-origin: 0 0;
+    
 }
 
 /* --- --- --- --- --- --- */
@@ -169,15 +314,17 @@ header {
     transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
 
     border-radius: 8px;
-    box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.15);
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 
-    -webkit-backface-visibility: hidden; /* Safari */
+    -webkit-backface-visibility: hidden;
+    /* Safari */
     backface-visibility: hidden;
 }
 
@@ -193,7 +340,7 @@ header {
 .flip-card:nth-child(1) .flip-card-back {
     background-color: #33a5e9;
     background-image: linear-gradient(160deg, #33a5e9 0%, #9eddd5 100%);
-    
+
 }
 
 .flip-card:nth-child(2) .flip-card-back {
@@ -203,7 +350,7 @@ header {
 
 .flip-card:nth-child(3) .flip-card-back {
     background-color: #FBAB7E;
-    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);    
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
 }
 
 .flip-card img {
@@ -276,10 +423,10 @@ header {
     width: 100%;
     height: 100%;
 
-    
+
     background: inherit;
     border-radius: 50px;
-    
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -307,74 +454,167 @@ header {
     background: none;
 }
 
-/* Modal box */
-
-#modal-sector {
-    display: none; /* Hidden by default */
-}
-
-#modal-transition {
-    display: none; /* Hidden by default */
-}
-
-#modal-clients {
-    display: none; /* Hidden by default */
-}
+/* Modal */
 
 .modal {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
+    position: fixed;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,.4); /* Black w/ opacity */
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    background: rgba(0, 0, 0, .5);
+
+    z-index: 2;
+    display: none;
+
+    animation: modal-open .5s;
 }
 
-/* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    background: #fff;
+    margin: 5% auto 0 auto;
+    width: 80%;
     height: 80%;
+    padding: 8px 24px;
+    border-radius: 4px;
+    z-index: 4;
+
+    overflow: auto;
+}
+
+.modal-header {
+    padding: 10px 0;
+    text-align: center;
 
     position: relative;
+}
 
-    animation-name: animatezoomin;
-    animation-duration: 0.4s
+.modal-header h1 {
+    font-size: 26px;
+    font-weight: 500;
+
+    font-family: 'Mako';
+}
+
+.modal-header .modal-close {
+    border: none;
+    outline: none;
+    background: none;
+    scale: 1.3;
+
+    color: var(--dark-gray);
+
+    position: absolute;
+    top: 5px;
+    right: 0;
+
+    transition: opacity .2s;
+}
+
+.modal-header .modal-close:hover {
+    opacity: .8;
+}
+
+.modal-body {
+    color: #7b7b7b;
+    padding: 15px 0;
+}
+
+.modal-footer {
+    padding: 15px 0;
+}
+
+.modal-footer .modal-close {
+    padding: 8px 16px;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    color: #1a73e8;
 }
 
 /* Add Animation */
-@-webkit-keyframes animatezoomin {
-    from {transform: scale(0); opacity: 0;} 
-    to {transform: scale(1); opacity: 1;}
+@-webkit-keyframes modal-open {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
-@keyframes animatezoomin {
-    from {transform: scale(0); opacity: 0;} 
-    to {transform: scale(1); opacity: 1;}
+@keyframes modal-open {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
-/* The Close Button */
-.close {
-    line-height: 1.4;
-    color: #aaa;
-    font-size: 28px;
-    font-weight: bold;
-    position: absolute;
-    top: 10px;
-    right: 20px;
+.modal-body .grid-wrapper {
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 10px;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.modal-body .grid-item {
+    background-color: #ccc;
+    width: 100%;
+    height: auto;
+
+    padding: 15px 25px;
+    border-radius: 15px;
 }
 
+.item1 {
+    grid-area: 1 / 1 / 3 / 3;
+}
 
+.item2 {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.item3 {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.grid-item-header h1 {
+    font-family: 'Mako';
+
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+
+    color: #000;
+
+    margin: 10px 0;
+}
+
+.grid-item-body {
+    padding: 25px 0;
+}
+
+.grid-item-body p+p {
+    margin-top: 15px;
+}
+
+.placeholder {
+    background-color: #666;
+    width: 260px;
+    height: 160px;
+    border-radius: 15px;
+
+    float: right;
+
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
