--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     --background-main: #f7f7f7;
     --dark-gray: #2d3436;
     --light-gray: #d2dae2;
+    --eerie-black: #1D201F;
 
     /* Accent */
     --azraq-blue: #4a69bd;
@@ -30,7 +31,6 @@ body {
     color: var(--dark-grey);
 
     background-color: var(--background-main);
-    height: 300vh;
 }
 
  /* Hide scrollbar for Chrome, Safari and Opera */
@@ -59,6 +59,8 @@ html {
 
     background-color: rgba(50, 50, 50, .3);
     transition: background-color .3s;
+
+    animation: name duration timing-function delay iteration-count direction fill-mode;
 }
 
 #scroll-to-top i {
@@ -69,13 +71,17 @@ html {
     left: 50%;
     
     transform: translate(-50%, -50%) rotate(-90deg);
-    color: #333;
+    color: #fff;
+    /* color: #333; */
     
-    animation: bounce ease 2s infinite;
 }
 
 #scroll-to-top:hover {
     background-color: rgba(50, 50, 50, .45);
+}
+
+#scroll-to-top:hover i {
+    animation: bounce ease 2s infinite;
 }
 
 @keyframes bounce {     /* animation from https://codepen.io/nelledejones/pen/gOOPWrK */
@@ -93,22 +99,15 @@ h2 {
     font-family: 'Mako';
 }
 
-a {
-    color: var(--dark-grey);
-    text-decoration: none;
-
-    transition: color .2s ease-in-out;
-}
-
 .section {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .cta {
     background: var(--azraq-blue);
-    border: none;
+    border: 3px solid var(--azraq-blue);
     padding: 15px 30px;
-    border-radius: .5rem;
+    border-radius: 15px;
 
     cursor: pointer;
 
@@ -120,7 +119,8 @@ a {
 }
 
 .cta:hover {
-    background: var(--livid);
+    color: var(--azraq-blue);
+    background: var(--background-main);
 }
 
 /* --- --- --- --- --- --- */
@@ -143,15 +143,24 @@ header {
 
 .nav-links {
     list-style: none;
+    display: flex;
+    gap: 25px;
 }
 
-.nav-links li {
-    display: inline;
-    margin: 0 12px;
+.nav-links a {
+    padding: 5px 10px;
+    border-radius: 5px;
+
+    color: var(--dark-grey);
+    text-decoration: none;
+
+    transition: all .2s;
 }
 
-.nav-links li a:hover {
-    color: var(--azraq-blue);
+
+.nav-links a:hover {
+    color: white;
+    background-color: var(--azraq-blue);
 }
 
 .heading-title {
@@ -207,20 +216,23 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-}
-
-#discover h1 {
-    font-size: 3rem;
-    text-transform: uppercase;
-    letter-spacing: .6rem;
-    text-indent: .6rem;
-    text-align: center;
-    margin: 25px 0;
+    text-align: justify;
 }
 
 #discover p {
-    width: 60%;
+    width: 80%;
+}
+
+#txtdiscover p + p {
+    margin-top: 10px;
+}
+
+#discover h1 {
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: .6rem;
+    text-indent: .6rem;
+    margin: 25px 0;
 }
 
 #imgdiscover {
@@ -239,47 +251,49 @@ header {
     height: 55%;
 }
 
-#discover span {
+#discover img {
     display: block;
     transition: 150ms;
+
+    background-color: rgba(247, 247, 247, .6);
+
+    padding: 5px;
+    border: 5px solid var(--azraq-blue);
+    border-radius: 10px;
 }
 
-#discover span:hover {
+#discover img:hover {
     scale: 1.2;
     z-index: 2;
 }
 
-#img1 {
-    width: 60%;
-    height: 300px;
-    background-color: blue;
+.img1 {
+    width: 400px;
+    height: auto;
     
     position: absolute;
     top: 0;
     left: 0;
 }
 
-#img2 {
-    width: 60%;
-    height: 300px;
-    background-color: yellow;
+.img2 {
+    width: 400px;
+    height: auto;
     
     position: absolute;
     top: 15%;
     right: 0;
 }
 
-#img3 {
-    width: 60%;
-    height: 300px;
-    background-color: lightgreen;
+.img3 {
+    width: 400px;
+    height: auto;
     
     position: absolute;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     transform-origin: 0 0;
-    
 }
 
 /* --- --- --- --- --- --- */
@@ -404,6 +418,16 @@ header {
     text-transform: uppercase;
 }
 
+.card-cta {
+    border: none;
+    cursor: pointer;
+
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--background-main);
+}
+
+
 .white-btn {
     width: 200px;
     padding: 20px 0;
@@ -477,7 +501,7 @@ header {
     width: 80%;
     height: 80%;
     padding: 8px 24px;
-    border-radius: 4px;
+    border-radius: 10px;
     z-index: 4;
 
     overflow: auto;
@@ -555,66 +579,97 @@ header {
     }
 }
 
-.modal-body .grid-wrapper {
-    width: 100%;
+/* --- --- --- --- --- --- --- */
+/*      <-- Accordion -->      */
+/* --- --- --- --- --- --- --- */
+
+#faq {
+    padding: 100px 0;
+    display: flex;
+}
+
+.faq1, .faq2 {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    padding: 16px;
+    width: 90%;
+
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: .4s;
+
+    position: relative;
+}
+
+.accordion:first-of-type {
+    border-radius: 10px 10px 0 0;
+}
+
+.accordion:last-of-type {
+    border-radius: 0 0 10px 10px;
+}
+
+.active, .accordion:hover {
+    background-color: #ccc;
+}
+
+.accordion:after {
+    content: '\02795'; /* Unicode (+) */
+    font-size: 13px;
+    color: #777;
+    margin-left: 5px;
+
+    position: absolute;
+    top: 50%;
+    right: 18px;
+    transform: translateY(-50%);
+  }
+  
+  .active:after {
+    content: "\2796"; /* Unicode (-) */
+  }
+
+.panel {
+    /* margin-bottom: 15px; */
+    padding: 0 18px;
+    width: 90%;
+
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+
+    position: relative;
+}
+
+.panel::before {
+    content: "";
+    display: block;
+
+    width: 2px;
     height: 100%;
 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 15px;
-    grid-row-gap: 10px;
+    background-color: var(--azraq-blue);
+
+    position: absolute;
+    left: 10px;
+    top: 0;
 }
 
-.modal-body .grid-item {
-    background-color: #ccc;
-    width: 100%;
-    height: auto;
+/* --- --- --- --- --- ---  */
+/*      <-- Footer -->      */
+/* --- --- --- --- --- ---  */
 
-    padding: 15px 25px;
-    border-radius: 15px;
-}
-
-.item1 {
-    grid-area: 1 / 1 / 3 / 3;
-}
-
-.item2 {
-    grid-area: 1 / 3 / 2 / 4;
-}
-
-.item3 {
-    grid-area: 2 / 3 / 3 / 4;
-}
-
-.grid-item-header h1 {
-    font-family: 'Mako';
-
-    text-align: center;
-    font-size: 24px;
-    font-weight: 500;
-
-    color: #000;
-
-    margin: 10px 0;
-}
-
-.grid-item-body {
-    padding: 25px 0;
-}
-
-.grid-item-body p+p {
-    margin-top: 15px;
-}
-
-.placeholder {
-    background-color: #666;
-    width: 260px;
-    height: 160px;
-    border-radius: 15px;
-
-    float: right;
-
-    margin-left: 10px;
-    margin-bottom: 10px;
+footer {
+    height: 200px;
+    background-color: var(--eerie-black);
 }
