--- a/styles.css
+++ b/styles.css
@@ -260,6 +260,13 @@ header {
     padding: 5px;
     border: 5px solid var(--azraq-blue);
     border-radius: 10px;
+
+    box-shadow: -5px 5px 15px #333;
+}
+
+#discover img:nth-child(2) {
+    box-shadow: none;
+    box-shadow: 5px 5px 15px #333;
 }
 
 #discover img:hover {
@@ -293,7 +300,7 @@ header {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    transform-origin: 0 0;
+    transform-origin: 0;
 }
 
 /* --- --- --- --- --- --- */
@@ -670,6 +677,67 @@ header {
 /* --- --- --- --- --- ---  */
 
 footer {
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+
+    padding: 35px;
+
     background-color: var(--eerie-black);
+}
+
+footer p, footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer a::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+    transition: width .4s;
+}
+
+footer a:hover::after {
+    width: 80%;
+}
+
+footer img {
+    padding: 15px;
+    background-color:  #181a1a;
+    border-radius: 20px;
+}
+
+footer > div {
+    width: 100%;
+    display: flex;
+}
+
+footer > div ul {
+    flex: 1;
+
+    list-style: none;
+
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+footer > div div {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
 }
