--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@ body {
     color: var(--dark-grey);
 
     background-color: var(--background-main);
+
+    /* overflow: hidden; */
 }
 
  /* Hide scrollbar for Chrome, Safari and Opera */
@@ -124,16 +126,21 @@ h2 {
     background: var(--background-main);
 }
 
-/* --- --- --- --- --- --- */
-/*      <-- Header -->     */
-/* --- --- --- --- --- --- */
+/* --- --- --- --- --- --- --- */
+/*      <-- Navigation -->     */
+/* --- --- --- --- --- --- --- */
 
-header {
-    padding: 25px 50px;
-    min-height: 100vh;
-}
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    
+    padding: 10px 50px;
+    background: var(--background-main);
 
-.nav {
+    z-index: 99;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -163,6 +170,15 @@ header {
 .nav-links a:hover {
     color: white;
     background-color: var(--azraq-blue);
+}
+
+/* --- --- --- --- --- --- */
+/*      <-- Header -->     */
+/* --- --- --- --- --- --- */
+
+header {
+    padding: 25px 50px;
+    min-height: 100vh;
 }
 
 .heading-title {
@@ -348,6 +364,9 @@ header {
 .flip-card-front {
     background: white;
     /* position: relative; */
+
+    display: flex;
+    flex-direction: column;
 }
 
 .flip-card-back {
@@ -355,19 +374,19 @@ header {
 }
 
 .flip-card:nth-child(1) .flip-card-back {
-    background-color: #33a5e9;
-    background-image: linear-gradient(160deg, #33a5e9 0%, #9eddd5 100%);
-
+    background-image: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);
 }
 
 .flip-card:nth-child(2) .flip-card-back {
-    background-color: #85FFBD;
-    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+    background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
 
 .flip-card:nth-child(3) .flip-card-back {
-    background-color: #FBAB7E;
-    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+    background-image: linear-gradient(135deg, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
+}
+
+.flip-card:nth-child(2) .flip-card-back::after {
+    background: rgba(0,0,0,0.1);
 }
 
 .flip-card img {
@@ -392,17 +411,22 @@ header {
 }
 
 .front-card-content {
-    height: 281px;
+    flex: 1;
     padding: 0 10%;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 15px;
 }
 
 .front-card-content hr {
     border: 0.5px solid var(--light-gray);
+    margin: 15px 0;
+}
+
+.front-card-content p + p {
+    font-size: 14px;
+    opacity: .5;
 }
 
 .back-card-content {
@@ -419,6 +443,36 @@ header {
     color: white;
     font-family: Mako;
     text-transform: uppercase;
+}
+
+.back-card-content div {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.back-card-content h2 {
+    color: white;
+    font-size: 18px;
+    line-height: 1;
+    margin-bottom: 5px;
+}
+
+.back-card-content p {
+    font-size: 14px;
+    color: white;
+    opacity: .8;
+}
+
+.back-card-content p + p {
+    opacity: .6;
+    line-height: 1;
+}
+
+.back-card-content hr {
+    border: 1px solid white;
+    opacity: .4;
+    margin: 15px auto;
+    width: 85%;
 }
 
 .card-cta {
@@ -540,7 +594,7 @@ header {
 }
 
 .modal-header .modal-close:hover {
-    opacity: .8;
+    opacity: .9;
 }
 
 .modal-body {
